feat: mumeric keyboard
License: MIT
Signed-off-by: Henrique Dias <hacdias@gmail.com>

--- a/igo/index.html
+++ b/igo/index.html
@@ -17,7 +17,7 @@
 
   <div id="container">
     <div id="watch">
-      <div id="keyboard">
+      <div class="keyboard" id="text-keyboard">
         <input class="result" type="text"></input>
         <table>
           <tr>
@@ -38,6 +38,32 @@
           <tr>
             <td class="backspace"><i class="fas fa-backspace"></i></td>
             <td class="space">_</td>
+            <td class="enter">↵</td>
+          </tr>
+        </table>
+      </div>
+
+      <div class="keyboard" id="num-keyboard">
+        <input class="result" type="text"></input>
+        <table>
+          <tr>
+            <td class="key" data-value="1">1</td>
+            <td class="key" data-value="2">2</td>
+            <td class="key" data-value="3">3</td>
+          </tr>
+          <tr>
+            <td class="key" data-value="4">4</td>
+            <td class="key" data-value="5">5</td>
+            <td class="key" data-value="6">6</td>
+          </tr>
+          <tr>
+            <td class="key" data-value="7">7</td>
+            <td class="key" data-value="8">8</td>
+            <td class="key" data-value="9">9</td>
+          </tr>
+          <tr>
+            <td class="backspace"><i class="fas fa-backspace"></i></td>
+            <td class="key" data-value="0">0</td>
             <td class="enter">↵</td>
           </tr>
         </table>
