feat: melhorar picker
License: MIT
Signed-off-by: Henrique Dias <hacdias@gmail.com>

--- a/igo/index.html
+++ b/igo/index.html
@@ -410,7 +410,7 @@
     <div class="goto" data-to="mainmenu" data-needsunlock="true" id="mainbutton"></div>
   </div>
 
-  <script src="./js/picker.min.js"></script>
+  <script src="./js/lib/picker.min.js"></script>
   <script src="./js/keyboard.js"></script>
   <script src="./js/utils.js"></script>
   <script src="./js/data.js"></script>
