fix: nan on expense value
License: MIT
Signed-off-by: Henrique Dias <hacdias@gmail.com>

--- a/igo/index.html
+++ b/igo/index.html
@@ -223,8 +223,8 @@
         <div class="screen" id="place-booking" data-name="Reservar" data-call="fillBookingDetails">
           <input placeholder="Pessoas (30 máx)" type="text" id="new-booking-people" oninput="onNewBookingChange()"></input>
           <div>
-            <input id="new-booking-date" placeholder="Data" type="text" oninput="onNewBookingChange()"></input>
-            <input id="new-booking-time" placeholder="Horas" type="text" oninput="onNewBookingChange()"></input>
+            <input id="new-booking-date" placeholder="Data" type="text" onchange="onNewBookingChange()"></input>
+            <input id="new-booking-time" placeholder="Horas" type="text" onchange="onNewBookingChange()"></input>
           </div>
 
           <div class="flex f-50">
