feat: melhores estilos botao

--- a/igo/index.html
+++ b/igo/index.html
@@ -111,8 +111,8 @@
               </div>
             </div>
           </template>
-          <button class="book-btn goto blue" data-to="new-person">
-            <i class="fas fa-plus"></i> Novo
+          <button class="goto blue" id="new-contact-btn" data-to="new-person">
+            <i class="fas fa-plus"></i> Novo Contacto
           </button>
           <div class="content">
             <!-- Content goes here -->
