feat: improve some styles

--- a/igo/index.html
+++ b/igo/index.html
@@ -138,6 +138,10 @@
           <button class="call-btn goto blue" data-to="calls">
             <i class="fas fa-phone"></i> Chamadas
           </button>
+
+          <button class="call-btn goto blue" data-to="calls">
+            <i class="fas fa-phone"></i> TODO: GPS
+          </button>
         </div>
 
         <!-- New Person -->
