feat: clean up buttons
License: MIT
Signed-off-by: Henrique Dias <hacdias@gmail.com>

--- a/igo/index.html
+++ b/igo/index.html
@@ -140,8 +140,8 @@
             </button>
           </div>
 
-          <button class="call-btn goto blue" data-to="calls">
-            <i class="fas fa-phone"></i> TODO: GPS
+          <button class="person-map-btn blue" onclick="seePersonInMap(this)">
+            <i class="fas fa-map-pin"></i> Ver no mapa
           </button>
         </div>
 
