feat: add prototype final links

--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
     <div class="section_body">
       <a href="assets/prototipo.pdf">PBF</a>
       <a href="igo/index.html">Primeiro protótipo funcional</a>
-      <a class="disabled" href="protFuncional1-completo.html">Primeiro protótipo funcional completo</a>
-      <a class="disabled" href="protFuncional2-beta.html">Segundo protótipo funcional</a>
-      <a class="disabled" href="protFuncional2-completo.html">Segundo protótipo funcional completo</a>
-      <a class="disabled" href="protFinal-beta.html">Protótipo Final</a>
-      <a class="disabled" href="protFinal-completo.html">Protótipo Final completo</a>
+      <a href="igo/index.html">Primeiro protótipo funcional completo</a>
+      <a href="igo/index.html">Segundo protótipo funcional</a>
+      <a href="igo/index.html">Segundo protótipo funcional completo</a>
+      <a href="igo/index.html">Protótipo Final</a>
+      <a href="igo/index.html">Protótipo Final completo</a>
     </div>
 
     <label for="au" class="section_header">Avaliação com Utilizadores</label>
