feat: avatar for people
License: MIT
Signed-off-by: Henrique Dias <hacdias@gmail.com>

--- a/igo/index.html
+++ b/igo/index.html
@@ -435,6 +435,7 @@
 
   <script src="./js/lib/picker.min.js"></script>
   <script src="./js/keyboard.js"></script>
+  <script src="./js/avatar.js"></script>
   <script src="./js/utils.js"></script>
   <script src="./js/data.js"></script>
   <script src="./js/budget.js"></script>
