feat: delete contact
License: MIT
Signed-off-by: Henrique Dias <hacdias@gmail.com>

--- a/igo/index.html
+++ b/igo/index.html
@@ -148,8 +148,12 @@
             </button>
           </div>
 
-          <button class="person-map-btn blue" onclick="seePersonInMap(this)">
+          <button class="blue" onclick="seePersonInMap(this)">
             <i class="fas fa-map-pin"></i> Ver no mapa
+          </button>
+
+          <button class="cancel" onclick="deletePerson(this)">
+            <i class="fas fa-trash"></i> Apagar contacto
           </button>
         </div>
 
