started stuff finished

--- a/igo/index.html
+++ b/igo/index.html
@@ -218,7 +218,19 @@
           <img class="picture" src="assets/people/joaquim_fonseca.JPG">
           <p class="name">Primo Joaquim</p>
           <button class="cancel">
+            <i class="fas fa-phone-slash"></i>
+          </button>
+        </div>
+
+        <!-- Receiving Call -->
+        <div class="screen" id="calling" data-name="A receber chamada..." data-call="receiveCall">
+          <img class="picture" src="assets/people/joaquim_fonseca.JPG">
+          <p class="name">Primo Joaquim</p>
+          <button class="ok">
             <i class="fas fa-phone"></i>
+          </button>          
+          <button class="cancel">
+            <i class="fas fa-phone-slash"></i>
           </button>
         </div>
 
