feat: use keyboard

--- a/igo/index.html
+++ b/igo/index.html
@@ -309,7 +309,7 @@
         
         <!-- Lend Money -->
         <div class="screen" id="lend-money" data-name="Emprestar dinheiro">
-            <input placeholder="Quantia (100 máx)" id="lend-money-amount" type="number" oninput="onMoneyChange()"></input>
+            <input placeholder="Quantia (100€ máx.)" id="lend-money-amount" type="number" oninput="onMoneyChange()"></input>
             <div class="flex f-50">
               <button class="cancel" type="button" onclick="runAndBack(clearLendMoney)">Cancelar</button>
               <button class="ok disabled" id="lend-money-submit" type="button" onclick="lendMoney(this)">Emprestar</button>
