fixed call back button

--- a/igo/index.html
+++ b/igo/index.html
@@ -544,6 +544,12 @@
           </span>
           <span id="current-screen-name"></span>
         </span>
+        <span id="only-call">
+          <span class="call" id="endCall">
+            <i class="fas fa-angle-left"></i>
+          </span>
+          <span id="current-screen-name"></span>
+        </span>
       </div>
     </div>
 
