feat: add link to message icon

--- a/igo/index.html
+++ b/igo/index.html
@@ -128,7 +128,7 @@
 
       <div id="status">
         <i class="fas fa-signal"></i>
-        <i id="gotmessage" class="fas fa-envelope"></i>
+        <i id="gotmessage" class="fas goto fa-envelope" data-to="people"></i>
         <span class="clock"></span>
         <i class="fas fa-battery-three-quarters"></i>
       </div>
