feat: add envelope to person icon

--- a/igo/index.html
+++ b/igo/index.html
@@ -165,6 +165,9 @@
                 <p class="name"></p>
                 <p><i class="fas fa-ruler"></i> <span class="distance"></span>m</p>
               </div>
+              <div>
+                <i class="gotmsg fas fa-envelope"></i>
+              </div>
             </div>
           </template>
           <button class="goto blue" id="new-contact-btn" data-to="new-person">
