--- a/igo/index.html
+++ b/igo/index.html
@@ -76,7 +76,7 @@
         <input class="result" type="text"></input>
         <table>
           <tr>
-            <td class="key" data-value="1">. , !</td>
+            <td class="key" data-value="1">. , ! ?</td>
             <td class="key" data-value="2">ABC</td>
             <td class="key" data-value="3">DEF</td>
           </tr>
