feat: validatephone number correctly
License: MIT
Signed-off-by: Henrique Dias <hacdias@gmail.com>

--- a/igo/index.html
+++ b/igo/index.html
@@ -219,7 +219,7 @@
         <!-- New Person -->
         <div class="screen" id="new-person" data-name="Novo Contacto">
           <input placeholder="Nome (até 16 carateres)" id="new-person-name" type="text" oninput="onNewPersonChange()"></input>
-          <input placeholder="Número (até 9 digitos)" id="new-person-phone" type="number" oninput="onNewPersonChange()"></input>
+          <input placeholder="Número (9 digitos)" id="new-person-phone" type="number" oninput="onNewPersonChange()"></input>
           <div class="flex f-50">
             <button class="cancel" type="button" onclick="runAndBack(clearNewPerson)">Cancelar</button>
             <button class="ok disabled" id="new-person-submit" type="button" onclick="createPerson()">Adicionar</button>
