changed wrong screen name

--- a/igo/index.html
+++ b/igo/index.html
@@ -320,7 +320,7 @@
           </div>
 
         <!-- Places List -->
-        <div class="screen" id="places-list" data-name="Recomendar Local" data-call="fillPlacesList">
+        <div class="screen" id="places-list" data-name="Locais" data-call="fillPlacesList">
           <template>
             <div class="tpl item goto" data-to="place-desc">
               <div>
