--- a/igo/index.html
+++ b/igo/index.html
@@ -530,7 +530,16 @@
         </div>
 
         <div class="screen" id="faq" data-name="FAQ">
-          FAQ
+          <h1>FAQ</h1>
+
+          <p>Porque só consigo reservar com meia hora de antecedência?</p>
+          <p>Por uma questão de logística dos negociantes, só é possível efetuar reservas com, no mínimo, meia hora de antecência e, no máximo, um ano.</p>
+          
+          <p>O meu orçamento chegou ao fim. Posso gastar mais dinheiro?</p>
+          <p>Sim, pode. No entanto, sempre que efetuar uma compra será avisado de que está a exceder o orçamento.</p>
+          
+          <p>Como adicionar um amigo?</p>
+          <p>Dirija-se ao menu inicial, pessoas e selecione "Criar contacto".</p>
         </div>
       </div>
 
