--- a/T1/index.html
+++ b/T1/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <script src="https://threejs.org/build/three.js"></script>
+    <script src="js/Hand.js"></script>
     <script src="js/WireframeToggler.js"></script>
     <script src="js/Arm.js"></script>
     <script src="js/Articulation.js"></script>
