download three.js.min

--- a/T1/index.html
+++ b/T1/index.html
@@ -8,7 +8,7 @@
     </style>
   </head>
   <body>
-    <script src="https://threejs.org/build/three.js"></script>
+    <script src="js/three.min.js"></script>
     <script src="js/Hand.js"></script>
     <script src="js/WireframeToggler.js"></script>
     <script src="js/Arm.js"></script>
