--- a/T2/index.html
+++ b/T2/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <script src="js/three.min.js"></script>
+    <script src="js/utils.js"></script>
     <script src="js/Ball.js"></script>
     <script src="js/Wall.js"></script>
     <script src="js/Field.js"></script>
