painting and frame

--- a/T3/index.html
+++ b/T3/index.html
@@ -11,6 +11,8 @@
     <script src="js/three.min.js"></script>
     <script src="js/Scene.js"></script>
     <script src="js/Pedestal.js"></script>
+    <script src="js/Painting.js"></script>
+    <script src="js/Frame.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
