lots of progress

--- a/T3/index.html
+++ b/T3/index.html
@@ -10,6 +10,9 @@
   <body>
     <script src="js/three.min.js"></script>
     <script src="js/Scene.js"></script>
+    <script src="js/Spotlight.js"></script>
+    <script src="js/Room.js"></script>
+    <script src="js/Mesh.js"></script>
     <script src="js/Pedestal.js"></script>
     <script src="js/Painting.js"></script>
     <script src="js/Frame.js"></script>
