--- a/T3/index.html
+++ b/T3/index.html
@@ -16,6 +16,7 @@
     <script src="js/Pedestal.js"></script>
     <script src="js/Painting.js"></script>
     <script src="js/Frame.js"></script>
+    <script src="js/Icosahedron.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
