--- a/T4/index.html
+++ b/T4/index.html
@@ -13,6 +13,7 @@
     <script src="js/Scene.js"></script>
     <script src="js/Mesh.js"></script>
     <script src="js/Chess.js"></script>
+    <script src="js/Ball.js"></script>
     <script src="js/Die.js"></script>
     <script src="js/app.js"></script>
   </body>
