chess, pause, almost everything

--- a/T4/index.html
+++ b/T4/index.html
@@ -15,6 +15,7 @@
     <script src="js/Chess.js"></script>
     <script src="js/Ball.js"></script>
     <script src="js/Die.js"></script>
+    <script src="js/Pause.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
