add alpha map to dice

--- a/T4/index.html
+++ b/T4/index.html
@@ -10,7 +10,7 @@
   <body>
     <script src="js/three.min.js"></script>
     <script src="js/OrbitControls.js"></script>
-    <script src="js/Scene.js"></script>
+    <script src="js/MainScene.js"></script>
     <script src="js/Mesh.js"></script>
     <script src="js/Chess.js"></script>
     <script src="js/Ball.js"></script>
